# internal/handler/users.go
@@ -4,6 +4,8 @@ import (
 	"net/http"
 
 	"github.com/gofiber/fiber/v2"
+
+	"acsp/internal/dto"
 )
 
 // @Summary Get user info by id
@@ -95,5 +97,53 @@ func (h *Handler) uploadUserImage(c *fiber.Ctx) error {
 	return c.JSON(fiber.Map{
 		"errors":  false,
 		"message": "Successfully uploaded image",
+	})
+}
+
+// @Summary Update user info by id
+// @Tags users
+// @Description Update user info by id from the system
+// @ID update-user-information
+// @Accept  json
+// @Produce  json
+// @Param input body dto.UpdateUser true "user information"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400,404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Failure default {object} map[string]interface{}
+// @Router /api/v1/users/profile [put]
+func (h *Handler) updateUserProfile(c *fiber.Ctx) error {
+	userId, err := getUserId(c)
+	if userId == "" {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"errors":  true,
+			"message": "user id is incorrect",
+		})
+	} else if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": err.Error(),
+		})
+	}
+
+	var input dto.UpdateUser
+	if err := c.BodyParser(&input); err != nil {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"errors":  true,
+			"message": "invalid input body",
+		})
+	}
+
+	err = h.services.Users.UpdateUser(c.UserContext(), userId, input)
+	if err != nil {
+		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+			"errors":  true,
+			"message": err.Error(),
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"errors":  false,
+		"message": "Successfully updated user information",
 	})
 }
